@@ -1,3 +1,6 @@
+* Wed Jul 18 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.4-0
+- Add support for OEL and Puppet 5
+
 * Mon Apr 16 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.0.3-0
 - pki::copy's source parameter now accepts any string to allow for use of NSS
   and remote file sources.
